--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,21 +7,24 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
+  #- name: Posts
+  #  url: '#posts'
+  #  weight: 20
+  - name: Research
+    url: '#research'
     weight: 20
-  - name: Projects
-    url: '#projects'
+  - name: Publications
+    url: '#publications'
     weight: 30
+  - name: Awards
+    url: '#awards'
+    weight: 40
   - name: Talks
     url: '#talks'
-    weight: 40
-  - name: Publications
-    url: '#featured'
-    weight: 50
+    weight: 45
   - name: Contact
     url: '#contact'
-    weight: 60
+    weight: 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
